Change log (recent come first)

21 June 2008: Style object now allow tracing borders
  * We can now draw polygons with border, controlling the join style
    (including the miter limit), the cap style, the dashes, the color.
  * Style can be instructed to draw empty polygons. In that case
    the border is not closed in Poly, unless Poly.Close[] is used.

29 May 2008: Work on the documentation and on the internal allocation system.
  * Started to write documentation on the graphic capabilities of Box.
  * Destructors are now called automatically by the VM before deallocation
    of objects: Window, PointList and Style are now fully deallocated.
  * Used Valgrind to track allocation errors: found one major problem
    and corrected other two minor ones. Need to work more on this.

17 May 2008: Integration of Cairo in the graphic library.
  * The graphic terminal has been adjusted, removing the lowfn midfn
    function list, which are now replaced by full declared methods.
  * A new function to open any type of windows has been introduced.
    This function takes a GrpWindowPlan which can contain the window
    size, file_name, resolution, etc.
  * Cairo is now detected in configuration scripts and new terminals
    are avaiblable when Box is compiled with support for it.
    We now can use Cairo image, PDF, SVG, PS terminals.
  * Extended the method Window.Save, which now looks at the extension
    and can accordingly save EPS, PNG, PDF, SVG, BMP files.
  * Colors have now an alpha channel: translucency is possible with
    Cairo windows!
  * We can now set the drawing Style: we can decide what rule to use
    for filling and we now can also clip along the path generated
    by all the graphic commands (Line, Circle, Poly and Text).

26 April 2008: Improvements and bugfixes.
  * Subtypes are resolved into their children if the method in Subtype.Method
    is not found.
  * Bugfix in the resolution of subtype-->parent.

20 April 2008: Adjustments and bugfixes.