@@ -1,0 +1,8 @@
+// Interface to Gradient
+
+Gradient = ++Ptr
+
+P@Gradient ? "gradient_point"
+R@Gradient ? "gradient_real"
+Color@Gradient ? "gradient_color"
+()Char@Gradient ? "gradient_string"
